--- a/App.config
+++ b/App.config
@@ -25,6 +25,18 @@
             <setting name="proxies" serializeAs="String">
                 <value>proxies.txt</value>
             </setting>
+            <setting name="Iterval1" serializeAs="String">
+                <value>2</value>
+            </setting>
+            <setting name="Iterval2" serializeAs="String">
+                <value>3</value>
+            </setting>
+            <setting name="Iterval3" serializeAs="String">
+                <value>3</value>
+            </setting>
+            <setting name="Iterval4" serializeAs="String">
+                <value>2</value>
+            </setting>
         </AutoBrowseWeb.Properties.Settings>
     </userSettings>
 </configuration>
