--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -17,5 +17,17 @@
     <Setting Name="proxies" Type="System.String" Scope="User">
       <Value Profile="(Default)">proxies.txt</Value>
     </Setting>
+    <Setting Name="Iterval1" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">2</Value>
+    </Setting>
+    <Setting Name="Iterval2" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">3</Value>
+    </Setting>
+    <Setting Name="Iterval3" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">3</Value>
+    </Setting>
+    <Setting Name="Iterval4" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">2</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
